# Neural-Network

./: .gitignore  Model.data-00000-of-00001  Model.index  ReadMe.md  pyproject.toml  requirements.txt  runml.py  test.py  testing.py  training.py  utilities.py
Model/: Model.data-00000-of-00001  Model.index
TestModels/: points-3.csv  points-4.csv
TrainingModels/: points-1.csv  points-2.csv
