[tool.poetry]
name = "neural-network"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.5.3"
sklearn = "^0.0.0"
tensorflow = "^1.15"
pandas = "^0.25.3"
xlrd = "^1.0"
matplotlib = "^3.1"
XlsxWriter = "^1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
