[tool.poetry]
name = "neural-network"
version = "0.1.0"
description = ""
authors = ["MED <rickyblackwall@gmail.com>"]

[tool.poetry.dependencies]
python = "3.6.1"
tensorflow = "1.15.0"
sklearn = "0.0"
pandas = "0.25.3"
matplotlib = "3.1.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
